--- a/real_main.html
+++ b/real_main.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cyberia</title>
     <link rel="stylesheet" href="./style2.css">
+    <meta property="og:description" content="Welcome to the cafe & club Cyberia"/>
+    <meta property="og:image" content="./img/beer.jpg"/>
 </head>
 
 
