game1-accela 사진 대소문자 고침

--- a/game1.html
+++ b/game1.html
@@ -26,7 +26,7 @@
 
             <div class="accela">
                 <a href="./game2.html">
-                  <img src="./img/Accela3.png" alt="">
+                  <img src="./img/accela3.png" alt="">
                 </a>
               </div>
         </div>
